chore: revert changes that prevented text being truncated

--- a/packages/components/plh/plh-kids-kw/components/bottom-navigation-bar/bottom-navigation-bar.component.scss
+++ b/packages/components/plh/plh-kids-kw/components/bottom-navigation-bar/bottom-navigation-bar.component.scss
@@ -3,6 +3,7 @@
 }
 .nav-item {
   flex: 1 0 0;
+  overflow: hidden; // text overflow will be wrapped in elipsis below
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,12 +14,16 @@
 .label {
   width: 100%;
   text-align: center;
-  p {
-    white-space: nowrap;
-  }
 }
 
 // Hide inactive text buttons when set by param
 .label[data-isActive="false"][data-hideInactiveText="true"] {
-  display: none;
+  visibility: hidden;
+}
+
+.label > p {
+  white-space: nowrap; /* don’t wrap */
+  overflow: hidden; /* hide overflow */
+  text-overflow: ellipsis; /* show "..." */
+  display: block; /* required for ellipsis to work reliably */
 }
